<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".contactdetails.ContactDetailsActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pictureContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/userPicture"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/mask" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xlarge"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Oscar Armer" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/menu_hamburger" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/contactsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:background="@color/white"
            app:cardCornerRadius="@dimen/margin_nano"
            app:cardElevation="@dimen/fb_elevation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pictureContainer"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <View
                    android:id="@+id/divider"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/margin_xxlarge"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/phoneIcon"
                    android:layout_width="@dimen/avatar_size"
                    android:layout_height="@dimen/avatar_size"
                    android:layout_margin="@dimen/margin_large"
                    android:padding="@dimen/margin_xnano"
                    android:src="@drawable/ic_phone"
                    android:tint="@color/light_grey"
                    app:layout_constraintBottom_toBottomOf="@id/userMobileLabel"
                    app:layout_constraintEnd_toStartOf="@id/divider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/userMobileNumber" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/userMobileNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/black_light"
                    android:textSize="@dimen/text_size_xmedium"
                    app:layout_constraintStart_toEndOf="@id/divider"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="+36 70 123 234" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/userMobileLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/mobile_label"
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/text_size_medium"
                    app:layout_constraintBottom_toTopOf="@id/userWorkNumber"
                    app:layout_constraintStart_toEndOf="@id/divider"
                    app:layout_constraintTop_toBottomOf="@id/userMobileNumber" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/mobileIcon"
                    android:layout_width="@dimen/avatar_size"
                    android:layout_height="@dimen/avatar_size"
                    android:layout_margin="@dimen/margin_large"
                    android:padding="@dimen/margin_xnano"
                    android:src="@drawable/ic_hangout"
                    android:tint="@color/light_grey"
                    app:layout_constraintBottom_toBottomOf="@id/userMobileNumber"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/userMobileLabel" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/userWorkNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xlarge"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/black_light"
                    android:textSize="@dimen/text_size_xmedium"
                    app:layout_constraintBottom_toTopOf="@id/userWorkLabel"
                    app:layout_constraintStart_toEndOf="@id/divider"
                    app:layout_constraintTop_toBottomOf="@id/userMobileLabel"
                    tools:text="06 70 123 234" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/userWorkLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/work_label"
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/text_size_medium"
                    app:layout_constraintStart_toEndOf="@id/divider"
                    app:layout_constraintTop_toBottomOf="@id/userWorkNumber" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/workIcon"
                    android:layout_width="@dimen/avatar_size"
                    android:layout_height="@dimen/avatar_size"
                    android:layout_margin="@dimen/margin_large"
                    android:padding="@dimen/margin_xnano"
                    android:src="@drawable/ic_hangout"
                    android:tint="@color/light_grey"
                    app:layout_constraintBottom_toBottomOf="@id/userWorkNumber"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/userWorkLabel" />

                <View
                    android:id="@+id/horizontalDivider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/margin_large"
                    android:background="@color/lighter_grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/userWorkLabel"
                    app:layout_constraintTop_toBottomOf="@id/userWorkLabel" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/emailIcon"
                    android:layout_width="@dimen/avatar_size"
                    android:layout_height="@dimen/avatar_size"
                    android:layout_margin="@dimen/margin_large"
                    android:padding="@dimen/margin_xnano"
                    android:src="@drawable/ic_email"
                    android:tint="@color/light_grey"
                    app:layout_constraintBottom_toBottomOf="@id/userHomeLabel"
                    app:layout_constraintEnd_toStartOf="@id/divider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/userEmailAddress" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/userEmailAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/black_light"
                    android:textSize="@dimen/text_size_xmedium"
                    app:layout_constraintStart_toEndOf="@id/divider"
                    app:layout_constraintTop_toBottomOf="@id/horizontalDivider"
                    tools:text="oscar.armer@gmail.com" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/userHomeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/home_label"
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/text_size_medium"
                    app:layout_constraintStart_toEndOf="@id/divider"
                    app:layout_constraintTop_toBottomOf="@id/userEmailAddress" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>